--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aula 03 Metodologias Ágeis</h1>
+    <h1>Aula 03  Ágeis</h1>
     <p>Alterado no Github</p>
     <h2> Alteraçao 5</h2>
 </body>
